--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,4 +35,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run day1 part1
-      run: ls -lah "day1 - historian hysteria"
+      run: |
+        cd "day1 - historian hysteria"
+        python part1_mysolution2.py
